@startuml
hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam packageStyle rectangle

' --- ER diagram generated by LLM prompt ---

entity "Region" as region {
  *region_id : UUID <<PK>>
  --
  name : varchar
  climate_zone : varchar
  population : int
}

entity "MonitoringStation" as station {
  *station_id : UUID <<PK>>
  --
  region_id : UUID <<FK>>
  station_name : varchar
  latitude : decimal
  longitude : decimal
  install_date : date
}

entity "Sensor" as sensor {
  *sensor_id : UUID <<PK>>
  --
  station_id : UUID <<FK>>
  sensor_type : varchar
  unit : varchar
  status : varchar
}

entity "Measurement" as measurement {
  *measurement_id : UUID <<PK>>
  --
  sensor_id : UUID <<FK>>
  measured_at : datetime
  value : decimal
  quality_flag : varchar
}

entity "RiskForecast" as forecast {
  *forecast_id : UUID <<PK>>
  --
  region_id : UUID <<FK>>
  forecast_time : datetime
  risk_type : varchar
  risk_level : varchar
  confidence : decimal
}

entity "Alert" as alert {
  *alert_id : UUID <<PK>>
  --
  forecast_id : UUID <<FK>>
  created_at : datetime
  severity : varchar
  message : text
  status : varchar
}

entity "AgencyUser" as user {
  *user_id : UUID <<PK>>
  --
  full_name : varchar
  role : varchar
  email : varchar <<UNIQUE>>
}

entity "AlertRecipient" as recipient {
  *recipient_id : UUID <<PK>>
  --
  alert_id : UUID <<FK>>
  user_id : UUID <<FK>>
  delivered_at : datetime
  delivery_status : varchar
}

region ||--o{ station : contains
station ||--o{ sensor : hosts
sensor ||--o{ measurement : produces
region ||--o{ forecast : has
forecast ||--o{ alert : triggers
alert ||--o{ recipient : sent_to
user ||--o{ recipient : receives

note right of region
Сущность описывает территорию мониторинга,
для которой агрегируются измерения и прогнозы.
end note

note right of forecast
Связь с Region показывает,
что прогноз формируется для конкретного региона.
Связь с Alert отражает оповещения,
которые создаются при высоком риске.
end note

@enduml
